--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
 </head>
 <body>
 <div id="menu">
-<li><a href="#about">About Me</a></li>
-<li><a href="#photos">My Photos</a></li>
-<li><a href="#playlist">My Playlist</a></li>
-<li><a href="#like">Like</a></li>
-<li><a href="#qrcoder">QR code</a></li>
-<li><a href="#spa">Q&A</a></li>
-<li><a href="#contact">Contact Me</a></li>
+<ul>
+  <li><a href="#about">About Me</a></li>
+  <li><a href="#photos">My Photos</a></li>
+  <li><a href="#playlist">My Playlist</a></li>
+  <li><a href="#like">Like</a></li>
+  <li><a href="#qrcoder">QR code</a></li>
+  <li><a href="#spa">Q&A</a></li>
+  <li><a href="#contact">Contact Me</a></li>
+</ul>
 </div>
 		  
 <section id="about" class="section">
@@ -34,6 +36,7 @@
 about me
 <br/>
 <br/>
+I am david and this is my new site for the course
 <br/>
 </section>
 
@@ -56,6 +59,7 @@ about me
 <br/>
 my photos
 <br/>
+<img src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg" alt="TODO change for real pic">
 <br/>
 <br/>
 </section>
@@ -80,6 +84,7 @@ my photos
 my playlist
 <br/>
 <br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/veUjcN0vEqQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br/>
 </section>
 
@@ -125,6 +130,7 @@ give me a like
 <br/>
 scan my code
 <br/>
+<img src="frame.png" alt="the QR code for my site">
 <br/>
 <br/>
 </section>
