--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <br/>
 <br/>
 <br/>
+<h2><span>about me</span></h2>
 about me
 <br/>
 <br/>
@@ -40,7 +41,7 @@ I am david and this is my new site for the course
 <br/>
 </section>
 
-<section id="photos" class="section">
+<section id="photos" class="section" >
 <br/>
 <br/>
 <br/>
@@ -154,6 +155,11 @@ scan my code
 <br/>
 ans
 <br/>
+<div>
+  <ol type="1">
+    <li>in web 1 you can only read data and not write  in oppose to web 2 where you can also</li>
+  </ol>
+</div>
 <br/>
 <br/>
 </section>
