final commit finished the assignment :)

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <br/>
 <h2><span>about me</span></h2>
 <p><pre class="about">
-  I am netero, the head of the 12th Chairman of the Hunter Association and the Head of the Exam Commission.<br>
+  I am Isaac Netero, the head of the 12th Chairman of the Hunter Association and the Head of the Exam Commission.<br>
   In my childhood, I was extolled as the most powerful Nen user in the world, and retained dreadful strength even in my old age. <br>
   At the age of 110 I was forced to fight against the Cimera ants who threat the world with their king Meruem, <br>
   so i gatherd some of the most strongest nen users to help me and defeat them. <br>
@@ -81,9 +81,11 @@
 <br/>
 <br/>
 <div class="vids">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/sJE9pVtGAUk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></section>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/sJE9pVtGAUk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/Aj_DSP-XXGQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/LQ1Eo7iM1io" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
-
+</section>
 <section id="like" class="section">
 <br/>
 <br/>
@@ -126,20 +128,18 @@
 <br/>
 <br/>
 <br/>
-<h2><span>scan my code</span></h2>
+<h2><span>scan my code(DO NOT TOUCH THE CARD)</span></h2>
 <br/>
-<img src="frame.png" alt="the QR code for my site">
-<br/>
-<br/>
-</section>
-
-<section id="spa" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+<div class="flip">
+  <div class="flip-inner">
+    <div class="flip-front">
+      <img src="front.png" alt="front of card" style="width:300px;height:400px;">
+    </div>
+    <div class="flip-back">
+      <img src="back.png" alt="back of card" style="width:300px;height:400px;">
+    </div>
+  </div>
+</div>
 <br/>
 <br/>
 <br/>
@@ -150,11 +150,19 @@
 <br/>
 <br/>
 <br/>
-ans
+<br/>
+<br/>
+<h2><span>Q&A</span></h2>
 <br/>
 <div>
   <ol type="1">
-    <li>in web 1 you can only read data and not write  in oppose to web 2 where you can also</li>
+    <li class="qna">in web 1 you can only read data and not write in oppose to web 2 where you can also write into the web or in web 3 where you can also submit stuff and "interact" with the website.</li>
+    <li class="qna">the way in which you travel from one website to another or searching a spesific website is different between web 1.0 web 2.0 web 3.0.</li>
+    <li class="qna">In web 1 only large companies and experts can create and maintain websites, in web 2 small companies and people with some knowlage can create and maintain website and in web 3 anyone with an acces to internet can create and maintain websites  </li>
+  </ol>
+  <ol type="1">
+    <li class="qna">I want to have a file that people can download on a website: on web 1 it is impossible unless you host a website and can change the code of the website, web 3 you have google drive, which show's an example for the first and the third differences</li>
+    <li class="qna">I want to go and get info about a spesific yoyo and then to other one: on web 1 i will need to travel through links to try and get to these two , where in 2 and 3 you just search them on the search engine and press on the resaults. this one is for the second difference</li>
   </ol>
 </div>
 <br/>
@@ -182,11 +190,12 @@ ans
 
 <br/>
 <form action="mailto:shavitda@post.bgu.ac.il" method="get" enctype="text/plain">
-  <label for="fname">First name:</label>
-  <input type="text" id="fname" name="fname">
-  &nbsp;
-  <label for="subj">Last name:</label>
-  <input type="text" name="subject" placeholder="Your Name"><br>
+  <label for="fname">Your name:</label>
+  <input type="text" id="fname" name="fname" placeholder="Name">
+<br>
+<br>
+  <label for="subj">Subject:</label>
+  <input type="text" name="subject" placeholder="subject" style="width: 33.5%;"><br>
 <br>
 <label for="textarea">Yes talk to us:</label> 
 <textarea id="textarea" name="body" cols="30" rows="10" placeholder="tell me, why you want to be an hunter?"></textarea>
